# Medical-Chatbot

./: .env  Dockerfile  README.md  core_chatbot.py  embed_documents.py  fastapi_app.py  ingest.py  prompt.py  pyproject.toml  requirements.txt  streamlit_app.py  stt.py  tts.py  utils.py
docs/: fever.txt
vectorstore/: index.faiss  index.pkl
